--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/musify_logo"
         android:label="Musify Chat"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.I190626_190438"
         tools:targetApi="31">
+        <activity
+            android:name=".SignUp"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
